Bug 65563 - RTL: Arabic/Hebrew text appears left aligned during cell edit when horizontal text alignment is set to Default
Summary: RTL: Arabic/Hebrew text appears left aligned during cell edit when horizontal...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.7.2 release
Hardware: All All
: medium major
Assignee: Jonathan Clark
URL:
Whiteboard: target:26.8.0 inReleaseNotes:26.8
Keywords:
Depends on: 144296
Blocks: Cell-Edit-Mode RTL
  Show dependency treegraph
 
Reported: 2013-06-09 06:55 UTC by Muhammad Bashir Al-Noimi
Modified: 2026-03-16 19:07 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Wrong layout during editing the cell (1.22 KB, image/png)
2013-06-09 06:55 UTC, Muhammad Bashir Al-Noimi
Details
Wrong layout during editing the cell (1.22 KB, image/png)
2013-06-09 06:56 UTC, Muhammad Bashir Al-Noimi
Details
After finish editing the cell (1.03 KB, image/png)
2013-06-09 06:57 UTC, Muhammad Bashir Al-Noimi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Muhammad Bashir Al-Noimi 2013-06-09 06:55:03 UTC
All the Arabic text with Right To Left layout appears in Left To Right layout during input process then back to the right layout after finishing editing process.


PS
I'm not sure if bug appears on Windows machines
Comment 1 Muhammad Bashir Al-Noimi 2013-06-09 06:55:41 UTC Comment hidden (obsolete)
Comment 2 Muhammad Bashir Al-Noimi 2013-06-09 06:56:38 UTC
Created attachment 80555 [details]
Wrong layout during editing the cell
Comment 3 Muhammad Bashir Al-Noimi 2013-06-09 06:57:09 UTC
Created attachment 80556 [details]
After finish editing the cell
Comment 4 Fahad Al-Saidi 2013-06-09 07:25:24 UTC
confirm in 4.1 beta 1
Comment 5 Ahmad Harthi 2013-06-09 07:44:54 UTC Comment hidden (obsolete)
Comment 6 Ahmad Harthi 2013-06-09 07:49:13 UTC Comment hidden (obsolete)
Comment 7 Fahad Al-Saidi 2013-06-09 08:03:00 UTC Comment hidden (obsolete)
Comment 8 Lior Kaplan 2013-06-09 17:10:24 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2015-03-17 00:03:46 UTC Comment hidden (obsolete)
Comment 10 Lior Kaplan 2015-03-20 09:29:08 UTC
Still happens in 4.3.3 when layout isn't explicitly set, but hinted by direction (LTR,RTL). This happens regardless of sheet direction.
Comment 11 tommy27 2016-04-16 07:26:44 UTC Comment hidden (obsolete)
Comment 12 Lior Kaplan 2017-10-12 10:47:49 UTC
Still happens in LibreOffice 5.4.1.
Comment 13 Yousuf Philips (jay) (retired) 2017-10-13 11:02:03 UTC
So the problem is that though RTL is enabled on a cell, the 'Default' value set to horizontal text alignment is always putting it as left aligned rather than right aligned.

Simple work around: set the cell's alignment to right.

Eike, Bubli: Would this be an easy fix?
Comment 14 Eike Rathke (retired, only occasionally showing up) 2017-10-13 14:03:58 UTC
That analysis is not quite correct. The default cell alignment is *non-aligned*, how content is displayed horizontally aligned depends on the actual content. When editing cell content the EditEngine is used that seems to default to left-aligned (didn't check). Setting a hard alignment attribute at the cell is not correct and will break other things. Instead, the algorithm that decides how to align for display must also be used to set the default alignment for the EditEngine when in edit mode.
Comment 15 Omer Zak 2017-11-03 19:26:06 UTC
Still happens in:

Version: 5.4.2.2.0+
Build ID: 1:5.4.2-3~bpo9+1
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.utf8); Calc: group

OS: Debian 64bit Stretch (Debian 9.2, with some backported packages)


I tested with Hebrew text, while the spreadsheet is set to default (LTR) direction (Sheet > Right-To-Left is unchecked).
Comment 16 Eyal Rozenberg 2018-09-17 17:24:18 UTC
(In reply to Eike Rathke from comment #14)
That change seems like an easy fix for a developer who knows her/his way around the "EditEngine" - or am I wrong?

Anyway, the bug still manifests with versionn 6.1.1.2 .
Comment 17 QA Administrators 2019-09-18 02:53:39 UTC Comment hidden (obsolete)
Comment 18 Eyal Rozenberg 2021-09-04 17:40:11 UTC
This bug still manifests with:

Version: 7.2.0.1 / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_IL); UI: en-US
Calc: threaded

and it's not just Arabic of course.

I'm about to file a generalization of it.
Comment 19 Eyal Rozenberg 2024-07-15 06:56:05 UTC
Reproduction instructions, just to be super clear:

1. Create a new Calc document
2. Select any cell
3. Start typing text in an RTL language, e.g. نص عربي
4. Press Enter to finalize cell contents

Expected Results:
The text's alignment should be the same alignment after steps (3.) and (4.).

Actual Results:
The text is aligned Left while typing, Right after typing.


Notes:

* The complaint regards alignment, not direction
* We're talking about the _effective_ alignment. Formally, in both cases the alignment is "default".
* Before typing anything, the cursor alignment should probably match the cell's text direction (i.e. left if it's LTR, right if it's RTL), and then change if text of the opposite direction is typed.


Bug still manifests with LO 25.2 alpha:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4c8f88bef948b18f3d810c29a7f83496367758a9
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: en-US
Calc: CL threaded
Comment 20 ady 2024-07-21 02:00:16 UTC
This is _not_ related to the UI language (either RTL or LTR) as it can be reproduced in any UI language, so tdf#129661 is not related. Setting (back) tdf#43808 in the "Blocks" field.
Comment 21 Commit Notification 2026-03-03 21:32:18 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/057a333d62abd60006434d72c98bbc2cf704f4c4

tdf#65563 sc: Use correct horizontal adjust for cells during editing

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2026-03-04 10:49:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a7c1a6569f694e876d4a4fc6712396f0c99be23f

tdf#65563 sc: move UItest to CppUnittest

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.