tdf#65563 sc: Use correct horizontal adjust for cells during editing

This change implements a number of previously-missing special cases to
Edit Engine construction for cell edit. In general, what Calc displays
during editing should now be a much closer match to what Calc will
display after editing is finished.

As an implementation detail of this change, Calc will now automatically
set new cells containing RTL text to RTL after input is finished.

Change-Id: I9332b8ecb8afd7295301fbbe3785eb09808b94de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200912
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>